test/sematest/invalid/redefined_variable.java
class Test {
  public int test() {
    int name;
    foo();
    int name; /* illegal redefinition */
  }
}
